--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class="min-h-screen bg-gray-50">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
